all modals scrollable but one. pushing to check if changes fixed on mobile view

--- a/css/modal-styles.css
+++ b/css/modal-styles.css
@@ -22,7 +22,7 @@
 
 .modal h1
 {
-	margin: 2% 0 6% 0;
+	margin: 2% 0 5% 0;
 }
 
 .modal h2
@@ -30,7 +30,6 @@
 	margin-top: 6vh;
 }
 
-.modal a, 
 .modal p
 {
 	padding: 1% 0% 1% 0%;
@@ -43,6 +42,14 @@
 {
 	color: inherit;
 	text-decoration: underline;
+	transition: all .25s ease-in-out;
+	-moz-transition: all .25s ease-in-out;
+	-webkit-transition: all .25s ease-in-out;
+}
+
+.modal a:hover
+{
+	color: #26a69a;
 }
 
 .modal-content
@@ -50,16 +57,16 @@
 	overflow-y: scroll !important;
 }
 
-.modal
-table
+.modal table
 {
 	table-layout: fixed;
 }
 
-.modal
-img
+.modal img
 {
+	vertical-align: top;
 	max-width: 100%;
+	height: inherit;
 }
 
 .modal-close
