--- a/css/scroll-button.css
+++ b/css/scroll-button.css
@@ -1,7 +1,7 @@
 
 .scroll-button {
 	position: absolute;
-	bottom: 20%;
+	bottom: 15%;
 	z-index: 2;
 	display: inline-block;
 	-webkit-transform: translate(0, -50%);
