--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,9 @@ a, p
 	border: 2px solid #26a69a;
 	color: #26a69a;
 	border-radius: 5px;
-	transition: all .25s ease-in-out;
-	-moz-transition: all .25s ease-in-out;
-	-webkit-transition: all .25s ease-in-out;
+	transition: all .15s ease-in-out;
+	-moz-transition: all .15s ease-in-out;
+	-webkit-transition: all .15s ease-in-out;
 }
 
 .button:hover
